src/components/dashboard/MenuGroupDashboard.scss
@import "../../styles/variables.scss";

.menu-group-dashboard-page {
  // border: $test;
  margin: 3em;
  margin-top: 150px;

  .add-group-part {
    // border: $test1;
    border-bottom: 1px solid gray;
    height: 25vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    padding-bottom: 1em;
    margin-bottom: 1em;

    .title {
      font-size: 1.2em;
      font-weight: 600;
    }

    .add-form {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }

    .input-text {
      width: 20em;
      margin-left: 0.5em;
    }
    
    .input-group {
      padding-left: 1em;
      display: flex;
      justify-content: center;
      align-items: center;
      margin-bottom: 1em;
    }

    .btn-save, .btn-cancel {
      border: 0.2em solid LightSeaGreen;
      border-radius: 10px;
      width: 120px;
      background-color: LightSeaGreen ;
      color: white;
      cursor: pointer;
      font-size: 1.1em;
      padding: 0.5em 1em;
      vertical-align: middle;
      // white-space: nowrap;
      margin: 0.2em;
  
      &:hover, &:focus {
        outline: none;
        // background-color: #eb6663;
        border:0.2em solid PaleTurquoise;
        border-radius: 10px;
        color: PaleTurquoise;
      }
    }
  }

  .title-2 {
    font-size: 1.2em;
    font-weight: 600;
    text-decoration: LightSeaGreen wavy underline;
    text-underline-offset: 0.3em;
    margin-bottom: 2em;
  }

  .menu-group {
    border-bottom: 1px solid gray;
    height: 5vh;
    width: 90%;
    margin: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;

    .btn-edit, .btn-delete {
      border: none;
      background-color: transparent;
      font-size: 1.1em;
      color: black;
      cursor: pointer;
  
      &:hover, &:focus {
        outline: none;
        color: LightSeaGreen;
      }
    }
  }

  .menu-group-select {
    display: none;
  }

  .edit-group-menu {
    display: none;

    .edit-form {
      border-bottom: 1px solid gray;
      width: 90%;
      height: 100%;
      margin: auto;
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding-right: 3em;
  
      .input-text {
        width: 20em;
        margin-left: 0.5em;
      }
    }
  }

  .edit-group-menu-select {
    display: block;
  }

  .btn-edit-cancel, .btn-edit-save {
    border: none;
    background-color: transparent;
    font-size: 1.3em;
    color: black;
    cursor: pointer;

    &:hover, &:focus {
      outline: none;
      color: LightSeaGreen;
    }
  }
}

@media only screen and (max-width: 960px) {
  .menu-group-dashboard-page {
    // border: $test;
    margin: 2em;
    margin-top: 120px;
  
    .add-group-part {
  
      height: 30vh;

      .title {
        font-size: 1.1em;
      }
    }
  
    .title-2 {
      font-size: 1.1em;
      margin-bottom: 1em;
    }
  
    .menu-group {
      width: 95%;
    }
  
    .edit-group-menu {
  
      .edit-form {
        width: 95%;
        padding-right: 1em;
      }
    }
  }
}
@media only screen and (max-width: 500px) {
  .menu-group-dashboard-page {
    // border: $test;
    margin: 1em;
    margin-top: 120px;
  
    .add-group-part {
  
      .title {
        font-size: 1em;
        margin-bottom: 1.3em;
      }
  
      .input-text {
        width: 18em;
        margin-left: 0em;
      }
      
      .input-group {
        padding-left: 0em;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        margin-bottom: 1em;
      }
  
      .btn-save, .btn-cancel {
        border-radius: 10px;
        width: 100px;
        color: white;
        cursor: pointer;
        font-size: 1em;
        padding: 0.5em 1em;
        margin: 0.2em;
      }
    }
  
    .title-2 {
      font-size: 1em;
      font-weight: 600;
      text-underline-offset: 0.3em;
      margin-bottom: 2em;
    }
  
    .menu-group {
      border-bottom: 1px solid gray;
      height: 7vh;
      width: 95%;
      margin: auto;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: flex-start;

      .buttons {
        width: 95%;
        display: flex;
        justify-content: flex-end;
        align-items: flex-end;
      }
  
      .btn-edit, .btn-delete {
        border: none;
        background-color: transparent;
        font-size: 1em;
      }
    }
  
    .menu-group-select {
      display: none;
    }
  
    .edit-group-menu {
      display: none;
  
      .edit-form {
        border-bottom: 1px solid gray;
        width: 95%;
        height: 100%;
        margin: auto;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        padding-right: 0em;
    
        .input-text {
          width: 17em;
          margin-left: 0em;
        }

        .buttons {
          width: 95%;
          display: flex;
          justify-content: flex-end;
          align-items: flex-end;
        }
      }
    }
  
    .edit-group-menu-select {
      display: block;
    }
  
    .btn-edit-cancel, .btn-edit-save {
      font-size: 1em;
    }
  }
}

